[gd_scene load_steps=2 format=3 uid="uid://u21cosu2ombr"]

[ext_resource type="Script" path="res://scripts/level_elements/kill_area.gd" id="1_cw7mf"]

[node name="KillArea" type="Area3D"]
collision_layer = 0
collision_mask = 5
monitorable = false
script = ExtResource("1_cw7mf")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
